# mynccl

./: .clangd  .gitignore  compile_commands.json
ext-net/example/: compile_commands.json
ext-net/gnic/: Makefile  plugin.cc
ext-net/gnic/rdma_util/: BufPool.h  Endpoint.c  Endpoint.h  Engine.h  Request.h  config.h  utils.c  utils.h
ext-net/gnic/rdma_util/ibv_wrapper/: ibvwrap.h
ext-net/gnic/testbench/: Makefile  ctrl_server  ctrl_server.cpp  debug_util.h  mock_gpu.cpp  test_exchange.sh
ext-net/mpib/: CMakeLists.txt  Makefile  plugin.cc
ext-net/mpib/doc/: IB_FEATURE.md  dual-rail-cqe.md  path_isolation.md  transport.md  vdev.md  vm-topology.yaml
ext-net/mpib/doc/baseline/: isolated_path_separation.md
ext-net/mpib/include/: mpib.h  mpib_agent_iface.h
ext-net/mpib/nccl/: common.h  net.h
ext-net/mpib/scripts/: hostfile  launch_nccl.sh
ext-net/mpib/src/: ibvsymbols.cc  ibvsymbols.h  ibvwrap.cc  ibvwrap.h  mlx5dvsymbols.cc  mlx5dvwrap.cc  mpib_agent_client.cc  mpib_agent_client.h  mpib_common.cc  mpib_common.h  mpib_compat.h  mpib_connect.cc  mpib_gdr.cc  mpib_init.cc  mpib_p2p.cc  mpib_p2p.h  mpib_param.cc  mpib_param.h  mpib_reg.cc  mpib_socket.cc  mpib_socket.h  mpib_utils.cc  mpib_utils.h  plugin.cc
ext-net/mpib/src/mlx5/: mlx5dvcore.h  mlx5dvsymbols.h  mlx5dvwrap.h
ext-net/mpib/testbench/: Makefile  ctrl_server.cpp  endpoint.cpp  mock_gpu.cpp
ext-net/transport_agent/: Makefile  README.md
ext-net/transport_agent/doc/: agent_design.md
ext-net/transport_agent/src/: ipc.cc  ipc.h  main.cc  policy.cc  policy.h  shm.cc  shm.h
(+4 files in other folders)
